Refactoring of Conditions
- Instead of creating PathwayCondition (hta) and Condition (simulation),
the class Condition<E> is now generic to allow different classes in the
check (E element) method. AndCondition and OrCondition are now in the
simulation.condition package. Everyhing fixed accordingly.
- Besides, all deprecated constructors (new Integer, new Boolean...)
replaced by the corresponding .valueOf method in PSIGHOS
- Added (empty) Guideline class. Should be filled in subsequent commits